syntax = "proto3";

package pb;

enum XChainErrorEnum {
    SUCCESS = 0;
    // 内部错误
    INTERNAL_ERROR = 1;
    // 参数错误
    PARAM_ERROR = 2;
    // 未知错误
    UNKNOW_ERROR = 3;
}

// 通用请求Header
message ReqHeader {
    // 请求id
    string log_id = 1;
    // 标记请求方，方便问题定位
    string self_name = 2;
}

// 通用响应Header
message RespHeader {
    // 请求id
    string log_id = 1;
    // 错误码
    XChainErrorEnum error = 2;
    // 节点追踪信息，方便问题定位
    string trace_id = 3;
}

message BaseReq {
    ReqHeader Header = 1;
}

message BaseResp {
    RespHeader Header = 1;
}

service Xchain {
    // 示例接口
    rpc CheckAlive(BaseReq) returns (BaseResp) {}
}
